# hmpfr

./: .gitignore  README.md  hmpfr.cabal
cbits/: chsmpfr.c  chsmpfr.h
demo/: Demo.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.6/: hmpfr-0.4.5-inplace.conf  package.cache
src/Data/Number/MPFR/: FFIhelper.hsc
