cabal-version:       3.0
name:                hmpfr
version:             0.4.5
synopsis:            Haskell binding to the MPFR library
description:
  Haskell binding to the MPFR library.
  .
  The library includes both a pure and a mutable interface.
  The mutable interface should have a lot less overhead
  than the pure one.
  .
  Some simple examples of usage can be found in demo/Demo.hs.

category:            Data, Math
license:             BSD-3-Clause
license-file:        LICENSE
Stability:           experimental
Tested-with:
                GHC==9.0.2
                GHC==9.2.5
                GHC==9.4.3
author:              Aleš Bizjak, Michal Konečný
maintainer:          Michal Konečný <mikkonecny@gmail.com>
Homepage:            https://github.com/michalkonecny/hmpfr
build-type:          Simple
Extra-source-files:  demo/Demo.hs

Data-files:
  README.md
  dict.txt
  ChangeLog

source-repository head
  type:     git
  location: https://github.com/michalkonecny/hmpfr


Library
  build-Depends:       base >= 4.8 && < 5,
                       integer-gmp
  extra-libraries:     mpfr
  Exposed-modules:
                       Data.Number.MPFR.FFIhelper
                       Data.Number.MPFR.Internal
                       Data.Number.MPFR.Mutable.Internal

                       Data.Number.MPFR.Mutable.Arithmetic
                       Data.Number.MPFR.Mutable.Special
                       Data.Number.MPFR.Mutable.Integer
                       Data.Number.MPFR.Mutable.Misc

                       Data.Number.MPFR.Assignment
                       Data.Number.MPFR.Conversion
                       Data.Number.MPFR.Arithmetic
                       Data.Number.MPFR.Comparison
                       Data.Number.MPFR.Special
                       Data.Number.MPFR.Integer
                       Data.Number.MPFR.Misc

                       Data.Number.MPFR.Instances.Near
                       Data.Number.MPFR.Instances.Up
                       Data.Number.MPFR.Instances.Down
                       Data.Number.MPFR.Instances.Zero

                       Data.Number.MPFR

                       Data.Number.MPFR.Mutable
  ghc-options:         -Wall -fno-warn-orphans -optc-target -optcarm64-apple-macos14.5 -optc-mmacosx-version-min=14.0
  hs-source-dirs:      src
  include-dirs:        cbits, /opt/homebrew/Cellar/mpfr/4.2.1/include/, /opt/homebrew/Cellar/gmp/6.3.0/include/
  extra-lib-dirs:      /opt/homebrew/Cellar/mpfr/4.2.1/include/, /opt/homebrew/Cellar/mpfr/4.2.1/lib/, /opt/homebrew/Cellar/gmp/6.3.0/lib/ 
  includes:            mpfr.h
  install-includes:    chsmpfr.h
  c-sources:           cbits/chsmpfr.c
  default-language:    Haskell2010

Executable demo
  main-is:             Demo.hs
  build-Depends:       base >= 4.8 && < 5,
                       hmpfr,
                       digits >= 0.3.1
  GHC-options:         -Wall -fno-warn-orphans
  hs-source-dirs:      demo
